Close each section with its demos, and tighten the tool chapters
Demo boxes give way to a demos shortcode that ends a section with one
"Demo N: name" pill per line, drawn from demos.js, in a violet of its own
that follows the system dark mode. Every demo is linked from at least one
section.

Getting started no longer explains layouts and introduces the version
setting instead. Chapters stop leaning on concepts that come later (pins
before Pinning, the toolchain key in Configuration), property namespaces
are described as groups of concerns, a step is keyed by its identity as
well as its inputs, jar runs before test, modular tests are framed around
qualified exports, and refreshing pins points to the resolution
strategies. The signing key is linked as /KEYS rather than inlined.